[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://scripts/Gravity.gd" type="Script" id=2]
[ext_resource path="res://assets/Gris.jpg" type="Texture" id=7]
[ext_resource path="res://assets/Font/PixeloidSans.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/Level.gd" type="Script" id=10]
[ext_resource path="res://prefabs/Playspace.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Themes/Main_Theme.theme" type="Theme" id=12]

[sub_resource type="DynamicFont" id=76]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=172]
size = 36
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=381]
size = 27
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=382]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=383]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 512, 304 )

[node name="Level" type="Node2D"]
script = ExtResource( 10 )

[node name="Play" type="Button" parent="."]
visible = false
margin_left = 896.0
margin_top = 496.0
margin_right = 1008.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 76 )
disabled = true
text = "Play"

[node name="Title" type="Label" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 172 )
text = "Test"
align = 1
valign = 1

[node name="Upgrade" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 592.0
theme = ExtResource( 12 )

[node name="Description" type="Label" parent="Upgrade"]
margin_left = 288.0
margin_top = 96.0
margin_right = 736.0
margin_bottom = 144.0
text = "Choise a pool of card to add to your deck"
align = 1

[node name="Title" type="Label" parent="Upgrade"]
margin_left = 384.0
margin_top = 48.0
margin_right = 512.0
margin_bottom = 70.0
rect_scale = Vector2( 2, 2 )
text = "Upgrade"
align = 1
uppercase = true

[node name="ListOfPool" type="HBoxContainer" parent="Upgrade"]
margin_top = 224.0
margin_right = 1024.0
margin_bottom = 576.0

[node name="PauseMenu" type="VBoxContainer" parent="."]
visible = false
margin_left = 432.0
margin_top = 128.0
margin_right = 592.0
margin_bottom = 240.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Filter" type="Sprite" parent="PauseMenu"]
self_modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 80, 168 )
scale = Vector2( 2.56, 1.48 )
texture = ExtResource( 7 )

[node name="Title" type="Label" parent="PauseMenu"]
margin_right = 160.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 381 )
text = "PAUSE"
align = 1

[node name="Resume" type="Button" parent="PauseMenu"]
margin_top = 37.0
margin_right = 160.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 382 )
text = "Resume"

[node name="BackToMenu" type="Button" parent="PauseMenu"]
margin_top = 69.0
margin_right = 160.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 383 )
text = "Back to menu"

[node name="Gravity" type="Area2D" parent="."]
visible = false
space_override = 1
gravity = 2.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gravity"]
position = Vector2( 512, 304 )
shape = SubResource( 29 )

[node name="Playspace" parent="." instance=ExtResource( 11 )]

[node name="CardsEffect" type="Node" parent="."]

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="PauseMenu/Resume" to="PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/BackToMenu" to="PauseMenu" method="_on_BackToMenu_pressed"]
[connection signal="empty_hand" from="Playspace" to="." method="_on_empty_hand"]
